# yt_xarray

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-docs.yml  build-test.yml  check-build.yml  check-manifest.yml  create-release.yml  publish-to-pypi.yml  run-pytest-tests.yml  style-checks.yml  type-check.yml  weekly-test.yml
docs/: Makefile  conf.py  contributing.rst  examples.rst  faq.rst  index.rst  installation.rst  make.bat  memory.rst  modules.rst  supported_grids.rst  usage.rst  yt_xarray.accessor.rst  yt_xarray.rst  yt_xarray.utilities.rst
docs/examples/: example_001_xr_to_yt.ipynb  example_002_coord_aliases.ipynb  example_003_two_dimensional_fields.ipynb  example_004_xr_yt_cartopy.ipynb  example_006_yt_method_access.ipynb  example_007_interpolation.ipynb  example_008_interpolation_with_refinement.ipynb  example_009_custom_transformations.ipynb  example_009_interpolated_in_yt_idv.py  example_010_custom_interpolations.ipynb  example_010_custom_transformations.ipynb
docs/source/: modules.rst  yt_xarray.YtAccessor.rst  yt_xarray.open_dataset.rst  yt_xarray.sample_data.rst  yt_xarray.transformations.rst
examples/: example_001_xr_to_yt.ipynb  example_002_dimension_reduction_and_coord_aliases.ipynb  example_002_xr_to_yt_ND.ipynb  example_003_loading_via_callable.ipynb  example_004_two_dimensional_fields.ipynb
tests/: __init__.py  lint_requirements.txt  test_accesor.py  test_chunking.py  test_sample_data.py  test_utilities.py  test_xr_to_yt.py  test_yt_xarray.py
yt_xarray/: __init__.py  _utilities.py  api.py  data_structures.py  io.py  logging.py  sample_data.py  transformations.py  yt_xarray.py
yt_xarray/accessor/: __init__.py  _readers.py  _xr_to_yt.py  _yt_wrappers.py  accessor.py
yt_xarray/frontend/: __init__.py  data_structures.py  fields.py
yt_xarray/tests/: test_accesor.py  test_chunking.py  test_grid_decomposition.py  test_optional_imports.py  test_sample_data.py  test_transformations.py  test_utilities.py  test_xr_to_yt.py  test_yt_wrappers.py
yt_xarray/utilities/: _grid_decomposition.py  _utilities.py
