[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yt_xarray"
authors = [
  { name="Chris Havlin", email="chris.havlin@gmail.com" },
]
description="interface between yt and xarray"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies=['yt>=4.2.0', 'h5py>=3.4.0', 'pooch>=1.5.1', 'xarray']
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/data-exp-lab/yt_xarray"
"Bug Tracker" = "https://github.com/data-exp-lab/yt_xarray/issues"

[project.optional-dependencies]
full = ["netCDF4", "scipy", "dask[complete]", "cf_xarray"]
test = ["pytest", "pytest-cov", "cartopy"]
docs = ["Sphinx==7.2.6", "jinja2==3.1.2", "nbsphinx==0.9.3"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
combine_as_imports = true
skip =  ["venv", "benchmarks"]

[tool.setuptools.dynamic]
version = {attr = "yt_xarray.__version__"}
